Updated to latest version of picosdk. Sped up core & SPI clocks. reduced fifo entries. reduced sleeps during boot. Stopped checking for FIFO_UNMATCH errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ if(WIN32)
 else()
     set(USERHOME $ENV{HOME})
 endif()
-set(sdkVersion 2.1.1)
+set(sdkVersion 2.2.0)
 set(toolchainVersion 14_2_Rel1)
-set(picotoolVersion 2.1.1)
+set(picotoolVersion 2.2.0)
 set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
 if (EXISTS ${picoVscode})
     include(${picoVscode})
@@ -33,13 +33,20 @@ project(adxl382_spi C CXX ASM)
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
+# It looks like either of the following methods work (add_compile_option or set(...), but they must be immediately after pico_sdk_init())
+ # Append the -fstack-usage flag to C compiler flags
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage")
+# If you have C++ code, also add it to CXX flags:
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-usage")
+add_compile_options("-fstack-usage")
 
+# Add executable. Default name is the project name, version 0.1
 add_executable(adxl382_spi
         adxl382.c
         main.c     
         )
-#enable uart and usb port
+
+        #enable uart and usb port
 pico_enable_stdio_uart(adxl382_spi 0)
 pico_enable_stdio_usb(adxl382_spi 1)
 # pull in common dependencies and additional spi hardware support
@@ -48,4 +55,6 @@ target_link_libraries(adxl382_spi pico_stdlib hardware_spi)
 # create map/bin/hex file etc.
 pico_add_extra_outputs(adxl382_spi)
 
-# add url via pico_set_program_url
+string(APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,--print-memory-usage")
+
+
